# kinetic

./: .dockerignore  .gitignore  Dockerfile  README.md  database.py  kinetic.db-journal  main.py  models.py  play.py  play_agent.py  play_icmp.py  play_volley.py  pyproject.toml  requirements.txt  router_functions.py  rrdHandler.py  rrd_handler.py  test.html  volley.py
.django/: README.md
.django/contrib/kinetic/checklist/: models.py
.django/contrib/kinetic/fping/: admin.py  fping_agent.py
.django/contrib/kinetic/kinetic/: asgi.py
contrib/: gunicorn.py  kinetic.service
data/: README.md
django.old/contrib/kinetic/checklist/: admin.py  forms.py  urls.py
django.old/contrib/kinetic/fping/: models.py  urls.py
django.old/contrib/kinetic/kinetic/: wsgi.py
django.old/contrib/kinetic/templates/: base.html  home.html
docker-volley/: Dockerfile  README.md
docs/: django_notes.md  kinetic.drawio
kinetic/checklist/: views.py
kinetic/checklist/templates/checklist/: index.html
kinetic/fping/: apps.py  fping_agent.py  rrd_helper.py  views.py
kinetic/fping/migrations/: 0001_initial.py
kinetic/fping/templates/fping/: agent.html  index.html  loss.html
kinetic/kinetic/: settings.py  urls.py
routers/: README.md  agent_jobs.py  agent_volley.py  agents.py  console.py  env.py  graph.py  hosts.py  monitors.py  status.py  targets.py  volley.py
rra_data/: README.md
scripts/: wipe.sh
static/css/: base.css
templates/: _layout.html  _navbar.html  agent.html  home.html  monitor.html  stats.html  volley_email.html  volley_notify.html
(+5 files in other folders)
